# ctypes-eigen-numpy

./: CMakeLists.txt  README  a.cpp  aaa.py
